# haKachelmannWetter

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml
.kiro/steering/: product.md  releases.md  tech.md
custom_components/kachelmannwetter/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  helpers.py  icons.json  manifest.json  sensor.py  strings.json  weather.py
custom_components/kachelmannwetter/translations/: de.json  en.json
docs/: openapi.json
scripts/: audit_api_coverage.py  deploy.sh
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_helpers.py  test_init.py  test_sensor.py  test_weather.py
